--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,9 @@
     "morgan": "~1.9.1",
     "pg": "^7.17.1",
     "pg-promise": "^10.3.5"
+  },
+  "heroku-postbuild": "npm install && cd client && npm install --only-dev && npm install && npm run build",
+  "engines": {
+    "node": "10.16.0"
   }
 }
