--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "heroku-postbuild": "npm install && cd client && npm install --only-dev && npm install && npm run build"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -21,7 +22,6 @@
     "pg-promise": "^10.3.5",
     "psql": "0.0.1"
   },
-  "heroku-postbuild": "npm install && cd client && npm install --only-dev && npm install && npm run build",
   "engines": {
     "node": "10.16.0"
   }
