--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,7 +1,7 @@
 [build]
     base = '/client'
     publish = '/client/build'
-    command = 'yarn build'
+    command = 'npm build'
 
 [[redirects]]
     from = '/*'
