--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,7 +1,7 @@
 [build]
     base = './client'
     publish = './build'
-    command = 'npm run build'
+    command = 'npm run build,yarn upgrade'
 
 [[redirects]]
     from = '/*'
